Add groovy & spock test into maven

--- a/pro-01-server-simple/pom.xml
+++ b/pro-01-server-simple/pom.xml
@@ -26,12 +26,6 @@
             <artifactId>common-grpc</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!--Test-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
@@ -44,8 +38,34 @@
             <artifactId>grpc-spring-boot-starter</artifactId>
         </dependency>
 
-    </dependencies>
+        <!-- TEST -->
+        <!-- spring boot test -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
+        <!-- spock test -->
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>1.1-groovy-2.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-spring</artifactId>
+            <version>1.1-groovy-2.4</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <repositories>
         <!-- GRPC GENERATION -->
