Upgrade the spring-boot & grpc versions

--- a/grpc-client-app/pom.xml
+++ b/grpc-client-app/pom.xml
@@ -16,12 +16,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring-boot-version>2.1.6.RELEASE</spring-boot-version>
+        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
 
         <!-- The compatible between grpc-version & netty-version: https://github.com/grpc/grpc-java/blob/master/SECURITY.md -->
         <!-- We cannot use netty-version 2.0.12.Final because it doesn't compatible with netty-tcnative-boringssl-static -->
-        <io.grpc-version>1.11.0</io.grpc-version>
-        <io.netty-version>2.0.25.Final</io.netty-version>
+        <io-grpc.version>1.11.0</io-grpc.version>
+        <io-netty.version>2.0.25.Final</io-netty.version>
     </properties>
 
     <dependencies>
@@ -41,26 +41,26 @@
 <!--        <dependency>-->
 <!--            <groupId>io.grpc</groupId>-->
 <!--            <artifactId>grpc-netty</artifactId>-->
-<!--            <version>${io.grpc-version}</version>-->
+<!--            <version>${io-grpc.version}</version>-->
 <!--        </dependency>-->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty-shaded</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
 
         <!-- Grpc TLS -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-tcnative-boringssl-static</artifactId>
-            <version>${io.netty-version}</version>
+            <version>${io-netty.version}</version>
         </dependency>
 
         <!-- gRPC testing -->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-testing</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -68,12 +68,12 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
 
 
@@ -156,7 +156,7 @@
                 <configuration>
                     <protocArtifact>com.google.protobuf:protoc:3.5.1-1:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${io.netty-version}:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${io-netty.version}:exe:${os.detected.classifier}</pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
