--- a/pro-01-client-simple/pom.xml
+++ b/pro-01-client-simple/pom.xml
@@ -20,9 +20,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring-boot-version>2.1.6.RELEASE</spring-boot-version>
-        <io.grpc-version>1.11.0</io.grpc-version>
-        <io.netty-version>2.0.25.Final</io.netty-version>
+        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
+        <io-grpc.version>1.11.0</io-grpc.version>
+        <io-netty.version>2.0.25.Final</io-netty.version>
 
 
 
@@ -45,13 +45,13 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
 
 
@@ -59,12 +59,12 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-testing</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -96,7 +96,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot-version}</version>
+                <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
