--- a/pro-05-grpc-tls/sample-grpc-tls-client/pom.xml
+++ b/pro-05-grpc-tls/sample-grpc-tls-client/pom.xml
@@ -16,11 +16,10 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring-boot-version>2.1.6.RELEASE</spring-boot-version>
-        <io.grpc-version>1.11.0</io.grpc-version>
-        <io.netty-version>2.0.25.Final</io.netty-version>
-
-
+        <spring-boot.version>2.1.8.RELEASE</spring-boot.version>
+        <io-grpc.version>1.23.0</io-grpc.version>
+        <io-netty.version>2.0.25.Final</io-netty.version>
+        <protobuf-java.version>3.5.1</protobuf-java.version><!-- TODO Do we really need this??? -->
 
         <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
     </properties>
@@ -41,12 +40,12 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
 
         <!-- GRPC CLIENT CONNECTION-->
@@ -54,14 +53,14 @@
             <groupId>io.grpc</groupId>
             <!-- Use grpc-netty-shaded instead of grpc-netty to resolve incompatible versions https://github.com/grpc/grpc-java/blob/master/SECURITY.md -->
             <artifactId>grpc-netty-shaded</artifactId>
-            <version>${io.grpc-version}</version>
+            <version>${io-grpc.version}</version>
         </dependency>
 
         <!-- Grpc TLS -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-tcnative-boringssl-static</artifactId>
-            <version>${io.netty-version}</version>
+            <version>${io-netty.version}</version>
         </dependency>
     </dependencies>
 
@@ -71,10 +70,31 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot-version}</version>
+                <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <finalName>sample-grpc-tls-client-${project.version}</finalName>
+        <plugins>
+            <plugin><!-- This plugin help use to create a jar file in a way that we can run it by using `java -jar xxx.jar` -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <mainClass>org.tnmk.practice.springgrpc.client.ClientTlsApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
