--- a/grpc-client-app/src/main/resources/application.yml
+++ b/grpc-client-app/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 grpc-connections:
-  content-management:
+  api-gateway-content-management:
     host: a985ebfe7b9f311e99ef50669891c4a8-970170879.us-east-2.elb.amazonaws.com
     port: 6565
     tls-certificate-file-path: "/opt/apps/resource/mobias-mona-lisa-syndicator/certificate/leo-dev/ca/cacert.pem"
