--- a/pro-01-client-simple/pom.xml
+++ b/pro-01-client-simple/pom.xml
@@ -19,14 +19,6 @@
         <java.version>8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-
-        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
-        <io-grpc.version>1.11.0</io-grpc.version>
-        <io-netty.version>2.0.25.Final</io-netty.version>
-
-
-
-        <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
     </properties>
 
     <dependencies>
@@ -45,13 +37,13 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>${io-grpc.version}</version>
+<!--            <version>${io-grpc.version}</version>-->
         </dependency>
 
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>${io-grpc.version}</version>
+<!--            <version>${io-grpc.version}</version>-->
         </dependency>
 
 
@@ -59,12 +51,12 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty</artifactId>
-            <version>${io-grpc.version}</version>
+<!--            <version>${io-grpc.version}</version>-->
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-testing</artifactId>
-            <version>${io-grpc.version}</version>
+<!--            <version>${io-grpc.version}</version>-->
             <scope>test</scope>
         </dependency>
 
@@ -72,20 +64,20 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.15</version>
+<!--            <version>2.4.15</version>-->
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
-            <version>1.1-groovy-2.4</version>
+<!--            <version>1.1-groovy-2.4</version>-->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-spring</artifactId>
-            <version>1.1-groovy-2.4</version>
+<!--            <version>1.1-groovy-2.4</version>-->
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -94,9 +86,9 @@
         <dependencies>
             <!-- SPRING FRAMEWORK DEPENDENCIES MANAGEMENT-->
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
+                <groupId>org.tnmk.skeleton</groupId>
+                <artifactId>practice-spring-grpc-dependencies</artifactId>
+                <version>0.0.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
