--- a/pro-01-server-simple/pom.xml
+++ b/pro-01-server-simple/pom.xml
@@ -8,11 +8,13 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-<!--    <parent>-->
-<!--        <groupId>org.tnmk.skeleton</groupId>-->
-<!--        <artifactId>practice-spring-grpc</artifactId>-->
-<!--        <version>0.0.1-SNAPSHOT</version>-->
-<!--    </parent>-->
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -71,7 +73,6 @@
     </dependencies>
 
 
-
     <dependencyManagement>
         <dependencies>
             <!-- SPRING FRAMEWORK DEPENDENCIES MANAGEMENT-->
@@ -99,14 +100,14 @@
         </repository>
     </repositories>
 
-<!--    <build>-->
-<!--        <plugins>-->
-<!--            &lt;!&ndash; SPRING PLUGIN &ndash;&gt;-->
-<!--            <plugin>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-<!--    </build>-->
+    <!--    <build>-->
+    <!--        <plugins>-->
+    <!--            &lt;!&ndash; SPRING PLUGIN &ndash;&gt;-->
+    <!--            <plugin>-->
+    <!--                <groupId>org.springframework.boot</groupId>-->
+    <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+    <!--            </plugin>-->
+    <!--        </plugins>-->
+    <!--    </build>-->
 
 </project>
