--- a/pro-07-download-file/download-file-client/pom.xml
+++ b/pro-07-download-file/download-file-client/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>netty-tcnative-boringssl-static</artifactId>
 <!--            <version>${io-netty.version}</version>-->
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
