--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <module>pro-04-server-interceptor-header-and-error</module>
         <module>pro-05-grpc-tls</module>
         <module>pro-06-server-simple-delegation</module>
-        <module>pro-07-download-file</module>
+        <module>pro-07-unary-download-file</module>
         <module>grpc-client-app</module>
         <module>practice-spring-grpc-dependencies</module>
     </modules>
