--- a/pro-08-stream-download-file/pom.xml
+++ b/pro-08-stream-download-file/pom.xml
@@ -13,6 +13,12 @@
     <artifactId>pro-08-stream-download-file</artifactId>
     <packaging>pom</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>8</java.version>
+    </properties>
+
     <modules>
         <module>stream-download-file-client</module>
         <module>stream-download-file-server</module>
