--- a/pro-01-simple/pro-01-client-simple/pom.xml
+++ b/pro-01-simple/pro-01-client-simple/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<!--    <parent>-->
-<!--        <artifactId>practice-spring-grpc</artifactId>-->
-<!--        <groupId>org.tnmk.skeleton</groupId>-->
-<!--        <version>0.0.1-SNAPSHOT</version>-->
-<!--    </parent>-->
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
+        <artifactId>pro-01-simple</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
     <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
     <artifactId>pro-01-client-simple</artifactId>
@@ -23,14 +23,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
+            <artifactId>pro-01-server-simple-proto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
-            <artifactId>sample-proto</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <!-- GRPC GENERATION: GENERATED STUB -->
