--- a/pro-01-simple/pro-01-server-simple/pom.xml
+++ b/pro-01-simple/pro-01-server-simple/pom.xml
@@ -3,6 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
+        <artifactId>pro-01-simple</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+
     <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
     <artifactId>pro-01-server-simple</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -72,7 +78,7 @@
 
         <dependency>
             <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
-            <artifactId>sample-proto</artifactId>
+            <artifactId>pro-01-server-simple-proto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
