Add test case for transfer data between different message types.

--- a/pro-01-simple/pro-01-server-simple-proto/pom.xml
+++ b/pro-01-simple/pro-01-server-simple-proto/pom.xml
@@ -29,6 +29,13 @@
             <version>${io-grpc.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
