--- a/grpc-client-app/src/main/resources/application-portforward.yml
+++ b/grpc-client-app/src/main/resources/application-portforward.yml
@@ -11,3 +11,7 @@ grpc-connections:
     host: 127.0.0.1
     port: 6565
     tls-certificate-file-path: ""
+  content-management:
+    host: 127.0.0.1
+    port: 6565
+    tls-certificate-file-path: ""
