Connect to UserManagement.

--- a/grpc-client-app/src/main/resources/application-portforward.yml
+++ b/grpc-client-app/src/main/resources/application-portforward.yml
@@ -15,3 +15,7 @@ grpc-connections:
     host: 127.0.0.1
     port: 6565
     tls-certificate-file-path: ""
+  user-management:
+    host: 127.0.0.1
+    port: 6565
+    tls-certificate-file-path: ""
