--- a/grpc-client-app/pom.xml
+++ b/grpc-client-app/pom.xml
@@ -16,12 +16,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-<!--        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>-->
+        <!--        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>-->
 
         <!-- The compatible between grpc-version & netty-version: https://github.com/grpc/grpc-java/blob/master/SECURITY.md -->
         <!-- We cannot use netty-version 2.0.12.Final because it doesn't compatible with netty-tcnative-boringssl-static -->
-<!--        <io-grpc.version>1.11.0</io-grpc.version>-->
-<!--        <io-netty.version>2.0.25.Final</io-netty.version>-->
+        <!--        <io-grpc.version>1.11.0</io-grpc.version>-->
+        <!--        <io-netty.version>2.0.25.Final</io-netty.version>-->
     </properties>
 
     <dependencies>
@@ -38,10 +38,10 @@
 
         <!-- GRPC -->
         <!-- gRPC client -->
-<!--        <dependency>-->
-<!--            <groupId>io.grpc</groupId>-->
-<!--            <artifactId>grpc-netty</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.grpc</groupId>-->
+        <!--            <artifactId>grpc-netty</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty-shaded</artifactId>
@@ -114,6 +114,18 @@
             <artifactId>content-vscape-syndication-service-proto</artifactId>
             <version>0.8.1</version>
         </dependency>
+
+        <!-- User Management -->
+        <dependency>
+            <groupId>com.leonardo.mona-lisa.user-management.user</groupId>
+            <artifactId>user-proto</artifactId>
+            <version>1.24.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.leonardo.mona-lisa.user-management.user</groupId>
+            <artifactId>user-authentication-proto</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -147,7 +159,8 @@
                 <configuration>
                     <protocArtifact>com.google.protobuf:protoc:3.5.1-1:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${io-netty.version}:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${io-netty.version}:exe:${os.detected.classifier}
+                    </pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
